# citedhealth-python

./: .gitignore  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/citedhealth/: __init__.py  cli.py  client.py  exceptions.py  models.py
tests/: test_client.py  test_models.py
