[project]
name = "citedhealth"
version = "0.3.1"
description = "Python client for the CITED Health evidence-based supplement API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Cited Health Inc.", email = "dev@citedhealth.com" }]
keywords = ["supplements", "evidence", "health", "pubmed", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
cli = ["typer>=0.15", "rich>=13.0"]

[project.scripts]
citedhealth = "citedhealth.cli:app"

[project.urls]
Homepage = "https://citedhealth.com"
Documentation = "https://citedhealth.com/developers/"
Repository = "https://github.com/citedhealth/citedhealth-python"
"API Reference" = "https://citedhealth.com/api/openapi.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citedhealth"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.8",
    "mypy>=1.14",
    "anyio[trio]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
